# carmen

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  README.md  azure_instances.csv  config-test.yaml  package.json  pyproject.toml  requirements.txt
.github/workflows/: release-pypi.yml
backend/src/: main.py
backend/src/api/: api.py  dependencies.py
backend/src/api/endpoints/: app.py  hw.py
backend/src/common/: constants.py  enums.py  errors.py  exception_handler.py  known_exception.py
backend/src/core/: registrar.py  settings.json  settings.py  yaml_config_loader.py
backend/src/crud/: crud_thanos_app.py  prometheus_query_builder.py
backend/src/crud/auth_strategies/: aad_auth.py  auth_strategy.py  none_auth.py
backend/src/daemon/: carbon_daemon.py  daemon_helpers.py  storage_helpers.py
backend/src/daemon/readers/compute/: __init__.py  azure_compute_reader.py  compute_reader.py  local_compute_reader.py
backend/src/daemon/writers/: __init__.py
backend/src/daemon/writers/compute/: azure_compute_writer.py  compute_writer.py  local_compute_writer.py
backend/src/errors/: __init__.py
backend/src/schemas/: application.py  cluster.py  compute_resource.py  pod.py  resource.py  response_models.py  storage_resource.py  virtual_machine.py
backend/src/services/: argos_service.py
backend/src/services/carbon_service/: carbon_service.py
backend/src/services/carbon_service/impact_framework/files/: app_pipeline.yml  (+5 more)
backend/src/utils/: azure_utils.py  helpers.py  ioc_util.py  metrics_mapper.py  paas_ci_mapper.py
backend/tests/: conftest.py  pytest.ini
backend/tests/api/: conftest.py
backend/tests/api/endpoints/: test_app.py  test_hw.py
backend/tests/core/: test_config.py  test_registrar.py
backend/tests/crud/: test_crud_thanos_app.py  test_prometheus_query_builder.py
backend/tests/daemon/: mock_finops_datalake.py  test.csv  test_carbon_daemon.py  test_daemon_computation.py  test_daemon_helpers.py  test_storage_helpers.py
backend/tests/daemon/test_data/: storage_test.csv  test_data.py  vm_usage_hour_0.csv  vm_usage_hour_1.csv  vm_usage_hour_10.csv  vm_usage_hour_11.csv  vm_usage_hour_12.csv  vm_usage_hour_13.csv  vm_usage_hour_14.csv  vm_usage_hour_15.csv  vm_usage_hour_16.csv  vm_usage_hour_17.csv  vm_usage_hour_18.csv  vm_usage_hour_19.csv  vm_usage_hour_2.csv  vm_usage_hour_20.csv  vm_usage_hour_21.csv  vm_usage_hour_22.csv  vm_usage_hour_23.csv  vm_usage_hour_3.csv  vm_usage_hour_4.csv  vm_usage_hour_5.csv  vm_usage_hour_6.csv  vm_usage_hour_7.csv  vm_usage_hour_8.csv  vm_usage_hour_9.csv
backend/tests/services/: test_argos_service.py
backend/tests/services/carbon_service/amadeus/: mock_amadeus_model.py  mock_component.py  test_amadeus_service.py
backend/tests/system_tests/api/: basic_test.robot
backend/tests/system_tests/api/get_apps/: get_apps.robot
backend/tests/system_tests/api/get_run_engine/: get_run_engine.robot
backend/tests/system_tests/resources/: keywords.robot  variables.py
backend/tests/utils/: test_helpers.py  test_ioc_util.py  test_metrics_mapper.py  test_paas_ci_mapper.py
docs/: CONTRIBUTING.md  carmen-as-a-service.md  carmen-daemon.md  comparison-with-other-tools.md  configuration.md  methodology.md
example-data/output/: .gitkeep
example-data/vm-metrics/: vm_metrics_2024_01.csv  vm_metrics_2024_02.csv  vm_metrics_simple.csv
(+36 files in other folders)
